<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="terms_of_service">Пользовательское соглашение</string>
    <string name="share_btn_link">https://practicum.yandex.ru/learn/android-developer</string>
    <string name="help_btn_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="help_btn_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email">e.komelina@yandex.ru</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="was_searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_1_30">00:00</string>
    <string name="track">track</string>
    <string name="input">input</string>
</resources>