<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_style_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_weight="3"
    android:insetTop="0dp"
    android:insetBottom="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/main_toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/idSearch"
        style="@style/main_style_button"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/idMediateka"
        style="@style/main_style_button"
        android:text="@string/mediateka"
        app:icon="@drawable/mediateka" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/idSettings"
        style="@style/main_style_button"
        android:text="@string/settings"
        app:icon="@drawable/settings" />
</LinearLayout>